:bug: resolved bug from motor ( test case stay duration = 2, chill days = 1, activity per days = 2, criterias = volcano mountain village